<resources>
    <string name="app_name">Từ điển TFlat</string>
    <string name="search_hint">Tra từ Anh Việt Anh</string>
    <string name="translate_doc">Dịch văn bản</string>
    <string name="ai_assistant">Trợ lý AI</string>
    <string name="vip_package">Gói từ vựng VIP</string>
    <string name="quiz">Quiz</string>
    <string name="old_skg">Từ vựng SGK cũ</string>
    <string name="new_skg">Từ vựng SGK mới</string>
    <string name="exam_vocab">Từ vựng luyện thi</string>
    <string name="your_words">Từ của bạn</string>
    <string name="searched_words">Từ đã tra</string>
    <string name="free_package">Gói từ vựng miễn phí</string>
    <string name="irregular_verbs">Động từ bất quy tắc</string>
    <string name="toeic_vocab">Từ vựng TOEIC</string>
    <string name="ielts_vocab">Từ vựng IELTS</string>
    <string name="toefl_vocab">Từ vựng TOEFL</string>
    <string name="oxford_vocab">Từ vựng Oxford</string>
    <string name="completion">Hoàn thành 0%</string>
    <string name="english_software">Phần mềm học tiếng Anh</string>
    <string name="settings">Cài đặt</string>

    <!-- Translation Document Activity strings -->
    <string name="input_text">Văn bản nguồn</string>
    <string name="translation">Bản dịch</string>
    <string name="enter_or_paste_text">Nhập hoặc dán văn bản tại đây...</string>
    <string name="translation_result">Kết quả dịch sẽ hiển thị tại đây...</string>
    <string name="english">Tiếng Anh</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="translate">DỊCH</string>
    <string name="translation_error">Không thể dịch văn bản. Vui lòng thử lại sau.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>